; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Internat.c_UniGetLineUnix.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Internat.c_UniGetLineUnix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @UniGetLineUnix(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %15, label %11

11:                                               ; preds = %2
  %12 = load i32, i32* %5, align 4
  %13 = sext i32 %12 to i64
  %14 = icmp ult i64 %13, 4
  br i1 %14, label %15, label %16

15:                                               ; preds = %11, %2
  store i32 0, i32* %3, align 4
  br label %35

16:                                               ; preds = %11
  %17 = load i32, i32* %7, align 4
  %18 = icmp sge i32 %17, 2147483647
  br i1 %18, label %19, label %21

19:                                               ; preds = %16
  %20 = load i32, i32* @MAX_SIZE, align 4
  store i32 %20, i32* %7, align 4
  br label %21

21:                                               ; preds = %19, %16
  %22 = load i32, i32* %7, align 4
  %23 = mul nsw i32 %22, 2
  store i32 %23, i32* %7, align 4
  %24 = load i32, i32* %7, align 4
  %25 = call i8* @ZeroMalloc(i32 %24)
  store i8* %25, i8** %6, align 8
  %26 = load i8*, i8** %6, align 8
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @AnsiGetLineUnix(i8* %26, i32 %27)
  %29 = load i32*, i32** %4, align 8
  %30 = load i32, i32* %5, align 4
  %31 = load i8*, i8** %6, align 8
  %32 = call i32 @StrToUni(i32* %29, i32 %30, i8* %31)
  %33 = load i8*, i8** %6, align 8
  %34 = call i32 @Free(i8* %33)
  store i32 1, i32* %3, align 4
  br label %35

35:                                               ; preds = %21, %15
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i8* @ZeroMalloc(i32) #1

declare dso_local i32 @AnsiGetLineUnix(i8*, i32) #1

declare dso_local i32 @StrToUni(i32*, i32, i8*) #1

declare dso_local i32 @Free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
